--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,3 +1,7 @@
+env:
+  BUILDKITE_PLUGIN_ALWAYS_CLONE_FRESH: "true"
+  BUILDKITE_CLEAN_CHECKOUT: "true"
+
 steps:
   - label: "Test incidentio plugin"
     command: exit 1
