test local plugin

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,7 +9,7 @@ steps:
       - INCIDENTIO_TOKEN
     plugins:
       - 'ssh://git@github.com/buildkite-plugins/incident-incidentio-buildkite-plugin.git#dev':
-          api-key: "$$INCIDENTIO_TOKEN"
+          api-key: $$INCIDENTIO_TOKEN
           severity-id: "01HN9MSGFN5GDCN9ZSR64W4096"
           incident-name: "Test Incident"
           incident-summary: "This is a test incident"
