--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,16 +6,16 @@ secrets:
   - INCIDENTIO_TOKEN
 
 steps:
-  - label: "Test incidentio plugin"
-    command: exit 1
+  # - label: "Test incidentio plugin"
+  #   command: exit 1
 
-    plugins:
-      - 'ssh://git@github.com/buildkite-plugins/incident-incidentio-buildkite-plugin.git#dev':
-          api-key: ${INCIDENTIO_TOKEN}
-          severity-id: "01HN9MSGFN5GDCN9ZSR64W4096"
-          incident-name: "Test Incident"
-          incident-summary: "This is a test incident"
-          incident-channel-mode: "public"
+  #   plugins:
+  #     - 'ssh://git@github.com/buildkite-plugins/incident-incidentio-buildkite-plugin.git#dev':
+  #         api-key: ${INCIDENTIO_TOKEN}
+  #         severity-id: "01HN9MSGFN5GDCN9ZSR64W4096"
+  #         incident-name: "Test Incident"
+  #         incident-summary: "This is a test incident"
+  #         incident-channel-mode: "public"
 
   - label: "Extend Terminal Session 2"
     command: |
