--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,15 +2,15 @@ env:
   BUILDKITE_PLUGINS_ALWAYS_CLONE_FRESH: "true"
   BUILDKITE_CLEAN_CHECKOUT: "true"
 
-secrets:
-  - INCIDENTIO_API_KEY
+# secrets:
+#   - INCIDENTIO_API_KEY
 
 steps:
-  - label: "Test incidentio plugin"
-    command: exit 1
-    plugins:
-      - 'ssh://git@github.com/buildkite-plugins/incident-incidentio-buildkite-plugin.git#dev':
-          severity-name: "SEV-5"
+  # - label: "Test incidentio plugin"
+  #   command: exit 1
+  #   plugins:
+  #     - 'ssh://git@github.com/buildkite-plugins/incident-incidentio-buildkite-plugin.git#dev':
+  #         severity-name: "SEV-5"
           # incident-name: "Test Incident"
           # incident-summary: "This is a test incident"
           # incident-channel-mode: "public"
