--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -19,7 +19,7 @@ steps:
     command: |
       touch testfile.txt
       echo "Starting job..."
-      # sleep 600  # Sleep for 10 minutes.
+      sleep 60
       echo "Job completed."
   # - command: pylint myfile
   #   soft_fail: false
