--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,15 +6,18 @@ secrets:
   - INCIDENTIO_API_KEY
 
 steps:
-  - label: "Test incidentio plugin"
-    command: exit 1
-    plugins:
-      - 'ssh://git@github.com/buildkite-plugins/incident-incidentio-buildkite-plugin.git#dev':
-          severity-name: "SEV-5"
+  # - label: "Test incidentio plugin"
+  #   command: exit 1
+  #   plugins:
+  #     - 'ssh://git@github.com/buildkite-plugins/incident-incidentio-buildkite-plugin.git#dev':
+  #         severity-name: "SEV-5"
           # incident-name: "Test Incident"
           # incident-summary: "This is a test incident"
           # incident-channel-mode: "public"
-
+  - label: "Testing private plugins"
+    command: echo "hello"
+    plugins:
+        - github.com/dahtey-bk/private-repo#v0.1.0: ~
   - label: "Extend Terminal Session 2"
     command: |
       touch testfile.txt
