--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "scaffold-core"]
-    path = scaffold-core
-    url = https://github.com/dahtey-bk//private-repo.git
+[submodule "private-repo"]
+    path = private-repo
+    url = https://github.com/dahtey-bk/private-repo.git
