--- a/.buildkite/annotate-pipeline.yml
+++ b/.buildkite/annotate-pipeline.yml
@@ -1,12 +1,13 @@
 steps:
   - label: annotate
-    plugins:
-      - bugcrowd/test-summary#v1.8.0:
-          inputs:
-            - label: rspec
-              artifact_path: artifacts/rspec*
-              type: junit
-          formatter:
-            type: details
-          context: test-summary
+    command: echo "hello"
+    # plugins:
+    #   - bugcrowd/test-summary#v1.8.0:
+    #       inputs:
+    #         - label: rspec
+    #           artifact_path: artifacts/rspec*
+    #           type: junit
+    #       formatter:
+    #         type: details
+    #       context: test-summary
 
