test plugin execution

--- a/.buildkite/annotate-pipeline.yml
+++ b/.buildkite/annotate-pipeline.yml
@@ -1,6 +1,5 @@
 steps:
   - label: annotate
-    command: echo "hello"
     # plugins:
     #   - bugcrowd/test-summary#v1.8.0:
     #       inputs:
@@ -10,4 +9,9 @@ steps:
     #       formatter:
     #         type: details
     #       context: test-summary
+    command: "touch artifacts/report.xml"
+    artifact_paths: "artifacts/*.xml"
+  - wait
+  - label: "Annotate test results"
+    command: ":true"
 
