--- a/.buildkite/annotate-pipeline.yml
+++ b/.buildkite/annotate-pipeline.yml
@@ -1,14 +1,14 @@
 steps:
   - label: annotate
-    # plugins:
-    #   - bugcrowd/test-summary#v1.8.0:
-    #       inputs:
-    #         - label: rspec
-    #           artifact_path: artifacts/rspec*
-    #           type: junit
-    #       formatter:
-    #         type: details
-    #       context: test-summary
+    plugins:
+      - github.com/bugcrowd/test-summary-buildkite-plugin#v1.7.0:
+          inputs:
+            - label: rspec
+              artifact_path: artifacts/rspec*
+              type: junit
+          formatter:
+            type: details
+          context: test-summary
     command: |
       mkdir -p artifacts
       cat > artifacts/rspec-results.xml <<EOF
